syntax = "proto3";

package pb;

// 包名
option go_package = "hello_client/pb";
option php_namespace = "proto\\pb";
option php_metadata_namespace = "proto\\metadata";

// 定义服务
service Greeter {
  // SayHello 方法
  rpc SayHello (HelloRequest) returns (HelloResponse) {}
  rpc ClientSayHello (stream HelloRequest) returns (HelloResponse) {}
  rpc ServerSayHello (HelloRequest) returns (stream HelloResponse) {}
  rpc DoubleSayHello (stream HelloRequest) returns (stream HelloResponse) {}
}

// 请求消息
message HelloRequest {
  string name = 1;
}

// 响应消息
message HelloResponse {
  string reply = 1;
}